src/itemstack.css
@font-face {
  font-family: Minecraftia;
  src: url(./Minecraftia-Regular.ttf);
}
.item-display {
  display: inline-block;
  background-color: rgba(39, 37, 5, 0.73);
  padding: 5px;
  border: 3px solid #848484;
  position: relative;
  margin-left: 3px;
  word-spacing: 3px;
}
.item-display .icon img {
  width: 30px;
  height: 30px;
  display: block;
}
.item-display .amount {
  position: absolute;
  bottom: -14px;
  right: 0px;
  color: #fbfbfb;
  font-family: 'Minecraftia';
  font-size: 17px;
  cursor: default;
}
.item-display .item-info {
  display: none;
  z-index: 1;
  position: fixed;
  border: 3px solid #23005a;
  padding: 1px 10px 5px 5px;
  background-color: rgba(15, 0, 15, 0.8);
  color: #fbfbfb;
  font-family: 'Minecraftia';
  font-size: 14px;
  width: max-content;
  color: #AAAAAA;
  text-shadow: 2px 2px #2a2a2a;
  border-radius: 3px;
}
.item-display .item-info .item-meta {
  margin-top: 2px;
  margin-bottom: -10px;
}
.item-display .item-info .item-meta:not(:last-child) {
  margin-bottom: -14px;
}
.item-display .item-info .item-meta.name {
  margin-bottom: -10px;
  color: #55FFFF;
  text-shadow: 2px 2px #3f3f3f;
  font-size: 15px;
}
.item-display:hover .item-info {
  display: block;
}

